# energyexe-core-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  API_RAW_DATA_FETCH.md  ARCHITECTURE.md  BACKFILL_SYSTEM_DOCUMENTATION.md  CAPACITY_FACTOR_CALCULATION.md  CELERY_BACKFILL_DOCUMENTATION.md  CELERY_SETUP_COMPLETE.md  DUPLICATE_PREVENTION_IMPLEMENTATION.md  Dockerfile  ELEXON_AGGREGATION_UPDATE.md  FIX_ENTSOE_TAIPOWER_INSTRUCTIONS.md  IMPORT_SCRIPTS_CHUNKING_ANALYSIS.md  MCP_SETUP.md  Makefile  NVE_IMPORT_BUG_ANALYSIS.md  RAILWAY_DEPLOYMENT.md  RAW_CAPACITY_DATA_SOURCES.md  README.md  REAGGREGATION_COMMANDS.md  UNIT_LIFESPAN_IMPLEMENTATION.md  WEATHER_DATA_INTEGRATION_PLAN.md  WINDFARM_COMPARISON_PLAN.md  alembic.ini  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  test_anholt_api.py  test_anholt_entsoe.py  test_anholt_updated.py
.claude/: mcp.json
alembic/: env.py
app/: __init__.py  celery_app.py  main.py
docs/: AUDIT_SYSTEM_GUIDE.md  ELEXON_BST_FIX_LOG.md  ENERGISTYRELSEN_DOUBLE_COUNTING_FIX.md  FINANCIAL_RATIOS.md  brain-agent-readonly-role.md  brain-agent-requirements.md  pipeline_backfill_investigation_2026-04-16.md
generation_processing_logs/: checkpoint_20020101_20081231_NVE.json  checkpoint_20020101_20241231_NVE.json  checkpoint_20020701_20231231_NVE.json  checkpoint_20060901_20061031_NVE.json  checkpoint_20080627_20241231_NVE.json  checkpoint_20090101_20161231_NVE.json  checkpoint_20130608_20151231_ELEXON.json  checkpoint_20150101_20241231_ENTSOE.json  checkpoint_20150113_20241231_NVE.json  checkpoint_20160101_20191231_ELEXON.json  checkpoint_20160401_20160531_ELEXON.json  checkpoint_20170101_20241231_NVE.json  checkpoint_20180203_20241231_ENTSOE.json  checkpoint_20190123_20191231_ELEXON.json  checkpoint_20190201_20240214_ELEXON.json  checkpoint_20190302_20241231_ENTSOE.json  checkpoint_20200101_20240214_ELEXON.json  checkpoint_20200801_20241231_TAIPOWER.json  checkpoint_20230205_20240214_ELEXON.json  checkpoint_20240101_20240101_ENTSOE.json  checkpoint_20240215_20251020_ELEXON.json  checkpoint_20240901_20240930_ENTSOE.json  checkpoint_20241001_20241231_ENTSOE.json  checkpoint_20250101_20250131_NVE.json  checkpoint_20250109_20250831_ENTSOE.json  checkpoint_20250201_20250228_NVE.json  checkpoint_20250301_20250331_NVE.json  checkpoint_20250401_20250430_NVE.json  checkpoint_20250501_20250531_NVE.json  checkpoint_20250601_20250630_NVE.json  checkpoint_20250701_20250731_NVE.json  checkpoint_20250701_20260214_ENTSOE.json  checkpoint_20250704_20250706_ENTSOE.json  checkpoint_20250801_20250831_NVE.json  checkpoint_20250901_20250930_ENTSOE.json  checkpoint_20250901_20250930_NVE.json  checkpoint_20250901_20251015_ENTSOE.json  (+113 more)
(+4704 files in other folders)
